--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -2,3 +2,7 @@ name: Post welcome comment
 on:
   pull_request:
     types: [opend]
+jobs:
+  build:
+    name: Post welcome comment
+    runs-on: ubuntu-latest
